Asterisk 0.7.2
 -- Countless small bug fixes from bug tracker
 -- DSP Fixes
 -- Fix unloading of Zaptel
 -- Pass Caller*ID/ANI properly on call forwarding
 -- Add indication for Italy
Asterisk 0.7.1
 -- Fixed timed include context's and GotoIfTime
 -- Fixed chan_h323 it now gets remote ip properly instead of 127.0.0.1
Asterisk 0.7.0
 -- Removed MP3 format and codec
 -- Can now load and unload SIP,IAX,IAX2,H323 channels without core
 -- Fixed various compiler warnings and clean up source tree
 -- Preliminary AES Support
 -- Fix SIP REINVITE
 -- Outbound SIP registration behind NAT using externip
 -- More CLI documentation and clean up
 -- Pin numbers on MeeMe
 -- Dynamic MeetMe conferences are more consistent with static conferences
 -- Added channel variables ${HANGUPCAUSE}, ${SIPDOMAIN}, ${TIMESTAMP}, ${ACCONTCODE}
 -- ODBC support for logging CDRs
 -- Indications for Norway and New Zeland
 -- Major redesign of app_voicemail
 -- Syslog support
 -- Reload logfiles with CLI command 'logger reload' and rotate logs with "logger rotate'
 -- Configurable DEBUG, NOTICE, WARNING, ERROR and ast_verbose messages now appear on remote console 
 -- Properly reaping any zombie processes
 -- Added applications SayUnixTime, SetCDRUserField, HasNewVoicemail, ZapScan, Random, ResetCDR, NoCDR
 -- Make PRI Hangup Cause available to the dialplan
 -- Verify included contexts in extensions.conf
 -- Add DESTDIR support for building RPMs and packages
 -- Do route lookups on OpenBSD
 -- Add support for building on FreeBSD and OS X
 -- Add support for PostgreSQL in Voicemail
 -- Translate SIP hangup cause to PRI hangup cause where needed
 -- Better support for MOH in IAX2
 -- Fix SIP problem where channels were not removed on BYE
 -- Display codecs by name
 -- Remove MySQL and put PGSql instead for licensing reasons
 -- Better capability matching in SIP
 -- Full IBR4 compliance for chan_zap
 -- More flexible CDR handling
 -- Distinguish between BUSY and FAILURE on outbound calls